--- a/docs.css
+++ b/docs.css
@@ -37,6 +37,20 @@ ol{ margin-left:2em; }
 ul{ margin-left:2em; }
 
 /* specific stuff */
+hr {
+	border-top: 1px solid #444;
+	border-bottom: 1px solid #000;
+	margin-top:1em;
+	margin-bottom:1em;
+}
+
+hr.midline {
+	border-top: 1px solid #999;
+	border-bottom: 1px solid #888;
+	margin-top:1em;
+	margin-bottom:1em;
+}
+
 #header {
 	background-color: #eee;
 	padding-left:1em;
@@ -47,6 +61,15 @@ ul{ margin-left:2em; }
 
 #header h1{
 	font-size:200%;
+}
+
+#header h1 a {
+	color:#000;
+	font-style: italic;
+}
+
+#header h1 a:hover {
+	color:#06A;
 }
 
 #tagline{
